<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/ScrollView01"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
    >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/bg_duty_recycler"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:cardUseCompatPadding="true"
        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".startpackageview.views.fragments.AboutFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="right"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/about_app"
        android:id="@+id/textView2"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_details"
        android:id="@+id/textView3"
        tools:ignore="RtlHardcoded" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        tools:targetApi="ice_cream_sandwich" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contact_me"
        android:layout_marginTop="20dp"
        android:layout_gravity="right"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/textView6"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_me"
        android:layout_gravity="right"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"

        android:id="@+id/textView4"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/country_me"
        android:layout_gravity="right"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:id="@+id/textView5"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email_id"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="right"
        android:autoLink="email"
        android:id="@+id/textView7"
        tools:targetApi="ice_cream_sandwich"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="20dp"
        android:layout_gravity="right"
        android:textColor="@color/colorPrimary"
        android:text="@string/phone_me"
        android:autoLink="phone"
        android:id="@+id/textView8"
        tools:targetApi="ice_cream_sandwich"
        tools:ignore="RtlHardcoded" />

</LinearLayout>
</android.support.v7.widget.CardView>
</ScrollView>