<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        tools:context=".startpackageview.views.fragments.StartAzkarFragment">

        <TextView
            android:id="@+id/text_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.06"
            android:gravity="center"
            android:text="@string/aya_start"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/azkar_btn_id"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.07"
            android:background="@drawable/round_white_bg"
            android:gravity="center"
            android:text="@string/azkar_title"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:targetApi="ice_cream_sandwich" />

        <Button
            android:id="@+id/doaa_btn_id"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="0.07"
            android:background="@drawable/round_white_bg"
            android:gravity="center"
            android:text="@string/doaa_title"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:targetApi="ice_cream_sandwich" />

        <Button
            android:id="@+id/azkary_type_Btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.07"
            android:background="@drawable/round_white_bg"

            android:gravity="center"
            android:text="@string/azkary_title"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:targetApi="ice_cream_sandwich" />

        <Button
            android:id="@+id/About_app_Btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.07"
            android:background="@drawable/round_white_bg"
            android:gravity="center"
            android:text="@string/about_app_title"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:targetApi="ice_cream_sandwich" />

        <Button
            android:id="@+id/close_App_Btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.07"
            android:background="@drawable/round_white_bg"
            android:gravity="center"
            android:text="@string/close_app_title"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:targetApi="ice_cream_sandwich" />


    </LinearLayout>
</ScrollView>