<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/ScrollView01"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".addingazkarpackage.views.fragments.AzkarAddingFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/azkary_title"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="40sp"
        android:id="@+id/textView"
        tools:targetApi="ice_cream_sandwich" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="10dp"
        android:text="@string/adding_azkar_doaa_title"
        android:gravity="right"
        android:textStyle="normal"
        android:textSize="25sp"
        android:id="@+id/textViewtwo"
        tools:targetApi="ice_cream_sandwich" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/azkar_text_adding"
        android:layout_gravity="center_horizontal"
        android:inputType="text" />

    <Button
        android:text="@string/save_azkar_title"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:id="@+id/addBtn"
        android:gravity="center"
        android:background="@drawable/round_white_bg"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>
</ScrollView>