<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".azkartypespackage.Views.fragments.AzkarMuslimTypeFragment">

        <TextView
            android:id="@+id/azkar_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text=" اللَّهُمَّ أعِنَّا عَلَى ذِكْرِكَ، وَشُكْرِكَ، وَحُسْنِ عِبَادَتِكَ"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/azkar_sbah_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/azkar_type_text"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_white_bg"
            android:gravity="center"
            android:text="@string/azkar_sbah_title"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:targetApi="ice_cream_sandwich" />

        <Button
            android:id="@+id/azkar_msa_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/azkar_sbah_btn"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_white_bg"
            android:gravity="center"
            android:text="@string/azkar_msa_title"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:targetApi="ice_cream_sandwich" />

        <Button
            android:id="@+id/azkar_nwm_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/azkar_msa_btn"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_white_bg"
            android:gravity="center"
            android:text="@string/azkar_nwm_title"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:targetApi="ice_cream_sandwich" />

        <Button
            android:id="@+id/azkar_esteqz_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/azkar_nwm_btn"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_white_bg"
            android:gravity="center"
            android:text="@string/azkar_esteqz_title"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            tools:targetApi="ice_cream_sandwich" />
    </RelativeLayout>
</ScrollView>